--- a/application/admin/view/after_sale/reminder_appraise.html
+++ b/application/admin/view/after_sale/reminder_appraise.html
@@ -83,8 +83,8 @@
                                                     <td class="yty_tdleft">快速筛选 :</td>
                                                     <td class="yty_tdright">
                                                         <div class="layui-form yty-checkbox-all">
-                                                            <input type="radio" lay-skin="primary" name="evaluationStatus" value="1" title="最近一天" checked lay-filter="evaluationStatus">
-                                                            <input type="radio" lay-skin="primary" name="evaluationStatus" value="2" title="最近一周"  lay-filter="evaluationStatus">
+                                                            <input type="radio" lay-skin="primary" name="evaluationStatus" value="1" title="最近一天" lay-filter="evaluationStatus">
+                                                            <input type="radio" lay-skin="primary" name="evaluationStatus" value="2" title="最近一周" checked lay-filter="evaluationStatus">
                                                             <input type="radio" lay-skin="primary" name="evaluationStatus" value="3" title="最近一个月"  lay-filter="evaluationStatus">
                                                         </div>
                                                     </td>
@@ -105,6 +105,18 @@
                             <div class="layui-card">
                                 <div class="layui-card-body layui-card-body-padding">
                                     <table class="layui-hide" id="appraiseEffectResult" lay-filter="appraiseEffectResult" table-reload-id="tableReload3" lay-size="sm"></table>
+                                </div>
+                                <div class="layui-card-body">
+                                    <div class="layui-row layui-tab-content">
+                                        <div class="layui-col-sm12">
+                                            <div class="layui-carousel layadmin-carousel layadmin-dataview" data-anim="fade"
+                                                 lay-filter="LAY-index-pagetwo">
+                                                <div carousel-item id="LAY-index-pagetwo">
+                                                    <div  style="width: 1024px !important;"><i class="layui-icon layui-icon-loading1 layadmin-loading"></i></div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -189,7 +201,7 @@
         version:true,
     }).extend({
         index: 'lib/index' //主入口模块
-    }).use(['index','table','element','form','authtree','we','weTable','laydate','formValidator','formSearch','sms_modal_init','area'], function(){
+    }).use(['index','table','element','form','authtree','we','weTable','laydate','formValidator','formSearch','sms_modal_init','area', 'sample','echarts'], function(){
         var admin = layui.admin
             ,element = layui.element
             ,table = layui.table
@@ -205,6 +217,7 @@
             ,toastr = layui.toastr
             , myDate = new Date()
             ,nowDate = we.addDate(myDate.getFullYear() + '-' + (myDate.getMonth()+1) + '-' +  myDate.getDate())//当前日期
+            , e = layui.$, a = (layui.carousel, layui.echarts), l = []
         ;
 
         /*********************下单提醒设置表格初始化begin**************************/
@@ -367,7 +380,7 @@
         laydate.render({
             elem: '#appraise_time_start'
             ,type: 'datetime'
-            ,value: we.addDate(nowDate,-2) + ' 00:00:00'
+            ,value: we.addDate(nowDate,-7) + ' 00:00:00'
         });
         laydate.render({
             elem: '#appraise_time_end'
@@ -383,11 +396,14 @@
             var appraise_time_end = we.addDate(nowDate,-1) + ' 23:59:59';
             var data = this.value
             console.log(data);
+            //最近一天
             if(data == 1) {
                 appraise_time_start =  we.addDate(nowDate,-2) + ' 00:00:00';
             }else if(data == 2) {
+                //最近一周
                 appraise_time_start = we.addDate(nowDate,-7) + ' 00:00:00';
             }else if(data == 3) {
+                //最近一个月
                 appraise_time_start = we.addDate(nowDate, -30) + ' 00:00:00';
             }
 
@@ -443,6 +459,96 @@
             }
         }
         table.render(tableCommon3); //数据表格初始化
+
+        /**
+         * 默认显示7天
+         * */
+        chart_switch(7);
+
+        /**
+         *趋势图、7、15天统计函数
+         * @param switch_
+         */
+        function chart_switch(switch_) {
+            $.ajax({
+                type: "post",
+                url: "", //调用后台接口
+                async: true,
+                cache: false,
+                data: {'switch': switch_},
+                success: function (data) {
+                    var t = [{
+                        title: {
+                            text: '催评效果统计图示'
+                        },
+                        tooltip: {
+                            trigger: 'axis',
+                            axisPointer: {
+                                type: 'cross',
+                                label: {
+                                    backgroundColor: '#6a7985'
+                                }
+                            }
+                        },
+                        calculable: !0,
+                        legend: {data: ["催评发送数量", "评价数量"]},
+                        toolbox: {
+                            show: true,
+                            feature: {
+                                mark : {show: true},
+                                magicType : {
+                                    show: true,
+                                    type: [ 'tiled','stack'], //'line', 'bar',
+                                    iconStyle: {
+                                        borderColor: ['#605ca8']
+                                    },
+                                },
+                                restore : {
+                                    show: true,
+                                    iconStyle: {
+                                        borderColor: ['#22bb22']
+                                    },
+
+                                },
+                            }
+                        },
+                        grid: {
+                            left: '0',
+                        },
+                        xAxis: [{
+                            type: "category",
+                            data: ["2019-03-04", "2019-03-05", "2019-03-06", "2019-03-07", "2019-03-08", "2019-03-09", "2019-03-10"]
+                        }],
+                        yAxis: [{type: "value"}],
+                        series: [{
+                            name: "催评发送数量",
+                            type: "line",
+                            itemStyle: {
+                                normal: {
+                                    color: "#ffaf25"
+                                }
+                            },
+                            data: [1, 2, 5, 5, 10, 11, 20]
+                        }, {
+                            name: "评价数量",
+                            type: "line",
+                            itemStyle: {
+                                normal: {
+                                    color: "#a85ba1"
+                                }
+                            },
+                            data: [5, 4, 0, 1, 3, 3, 3]
+                        }]
+                    }], i = e("#LAY-index-pagetwo").children("div"), n = function (e) {
+                        l[e] = a.init(i[e], layui.echartsTheme), l[e].setOption(t[e]), window.onresize = l[e].resize
+                    };
+                    i[0] && n(0)
+                },
+                error: function () {
+
+                }
+            });
+        }
         /**********************************催评效果begin************************************************/
 
 
